golden/error/lex_hash_comment.test
# This is not a comment.

# output:
 --> stdin:1:0
  |
1 | # This is not a comment.
  | ^
Error: Unrecognized punctuation here.

Help: Comments are written with '//', not with '#'.
